--- a/開発用/src/guest-room.html
+++ b/開発用/src/guest-room.html
@@ -1,71 +1,78 @@
 <!DOCTYPE html>
 <html lang="ja">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>客室</title>
-        <meta name="description" content="客室のページです">
-        <!-- googlefonts -->
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Shippori+Mincho:wght@400;800&family=Zen+Kaku+Gothic+New:wght@300;400;500;700&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="./assets/css/reset.css">
-  <link rel="stylesheet" href="./assets/css/style.css">
-    </head>
-    <body id="guest-room">
-        <header class="l-lower-header" id="header">
-            <h1 class="l-lower-header__title">客 室</h1>
-            <!-- ハンバーガーメニュー -->
-            <div class="c-drawer-btn l-lower-headerr__btn">
-                <span class="c-drawer-btn__bar"></span>
-            </div>
-            <nav class="p-gnav" id="gnav">
-                <a class="p-gnav__logo" href="index.html">
-                    <p class="p-gnav__logo-img">
-                        <img src="./assets/img/common/logo-white.png" alt="きずなや">
-                    </p>
-                    <p class="c-mv__title p-gnav__logo-text">KIZUNAYA</p>
-                </a>
-                <ul class="p-gnav__nav js-link" id="gnav">
-                    <li class="p-gnav__nav-list">
-                        <a href="index.html" class="p-gnav__nav-link g-nav-anm">
-                            温泉
-                        </a>
-                    </li>
-                    <li class="p-gnav__nav-list">
-                        <a href="index.html" class="p-gnav__nav-link g-nav-anm">
-                            客室
-                        </a>
-                    </li>
-                    <li class="p-gnav__nav-list">
-                        <a href="index.html" class="p-gnav__nav-link g-nav-anm">
-                            料理
-                        </a>
-                    </li>
-                    <li class="p-gnav__nav-list">
-                        <a href="index.html" class="p-gnav__nav-link g-nav-anm">
-                            過ごし方
-                        </a>
-                    </li>
-                    <li class="p-gnav__nav-list">
-                        <a href="index.html" class="p-gnav__nav-link g-nav-anm">
-                            アクセス
-                        </a>
-                    </li>
-                </ul>
-                <!-- <div class="c-drawer-btn p-gnav__btn">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>客室</title>
+    <meta name="description" content="客室のページです">
+    <!-- googlefonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Shippori+Mincho:wght@400;800&family=Zen+Kaku+Gothic+New:wght@300;400;500;700&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="./assets/css/reset.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
+</head>
+
+<body id="guest-room">
+    <header class="l-lower-header" id="header">
+        <h1 class="l-lower-header__title">客 室</h1>
+        <!-- ハンバーガーメニュー -->
+        <div class="c-drawer-btn l-lower-headerr__btn">
+            <span class="c-drawer-btn__bar"></span>
+        </div>
+        <nav class="p-gnav" id="gnav">
+            <a class="p-gnav__logo" href="index.html">
+                <p class="p-gnav__logo-img">
+                    <img src="./assets/img/common/logo-white.png" alt="きずなや">
+                </p>
+                <p class="c-mv__title p-gnav__logo-text">KIZUNAYA</p>
+            </a>
+            <ul class="p-gnav__nav js-link" id="gnav">
+                <li class="p-gnav__nav-list">
+                    <a href="index.html" class="p-gnav__nav-link g-nav-anm">
+                        温泉
+                    </a>
+                </li>
+                <li class="p-gnav__nav-list">
+                    <a href="index.html" class="p-gnav__nav-link g-nav-anm">
+                        客室
+                    </a>
+                </li>
+                <li class="p-gnav__nav-list">
+                    <a href="index.html" class="p-gnav__nav-link g-nav-anm">
+                        料理
+                    </a>
+                </li>
+                <li class="p-gnav__nav-list">
+                    <a href="index.html" class="p-gnav__nav-link g-nav-anm">
+                        過ごし方
+                    </a>
+                </li>
+                <li class="p-gnav__nav-list">
+                    <a href="index.html" class="p-gnav__nav-link g-nav-anm">
+                        アクセス
+                    </a>
+                </li>
+            </ul>
+            <!-- <div class="c-drawer-btn p-gnav__btn">
                     <span class="c-drawer-btn__bar"></span>
                     <span class="c-drawer-btn__bar"></span>
                     <span class="c-drawer-btn__bar"></span>
                 </div> -->
-            </nav>
-        </header>
-        <!-- /.l-header -->
-        <main class="l-main">
-            <div class="p-opening-sentence">
-                <div class="l-inner">
-                    <p class="p-opening-sentence__text">テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
-                </div>
+        </nav>
+    </header>
+    <!-- /.l-header -->
+    <main class="l-main">
+        <div class="p-opening-sentence">
+            <div class="c-main-message">
+                <p class="c-main-message__text">
+                    全室から海をご堪能いただけるように設計しています。<br>
+                    過ごしやすさを重視ししたこだわりの和洋室、<br>
+                    窓から入る朝日で心地の良いお目覚めを。
+                </p>
             </div>
             <section class="p-room">
                 <div class="l-inner">
@@ -86,7 +93,8 @@
                                 漣
                                 <span class="p-room__title-eng">Sazanami</span>
                             </h2>
-                            <p class="p-room__text">テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
+                            <p class="p-room__text">
+                                テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
                             <div class="p-room__text-bottom">
                                 <p class="p-room__text">定員　2名</p>
                                 <p class="p-room__text">広さ　和室　10畳＋８畳</p>
@@ -111,7 +119,8 @@
                                 <span class="p-room__title__eng">Nagi</span>
                             </h2>
                             <!-- /.room-title -->
-                            <p class="p-room__text">テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
+                            <p class="p-room__text">
+                                テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
                             <div class="p-room__text-bottom">
                                 <p class="p-room__text">定員　2名</p>
                                 <p class="p-room__text">広さ　和洋室　10畳＋８畳</p>
@@ -135,7 +144,8 @@
                                 渚
                                 <span class="p-room__title__eng">Nagisa</span>
                             </h2>
-                            <p class="p-room__text">テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
+                            <p class="p-room__text">
+                                テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
                             <div class="p-room__text-bottom">
                                 <p class="p-room__text">定員　４名</p>
                                 <p class="p-room__text">広さ　洋室　10畳＋８畳</p>
@@ -187,38 +197,39 @@
                     </p>
                 </div>
             </section>
-        </main>
-        <footer class="l-footer">
-            <div class="p-footer__wrap">
-              <div class="p-footer__info">
+    </main>
+    <footer class="l-footer">
+        <div class="p-footer__wrap">
+            <div class="p-footer__info">
                 <div class="c-footer__logo">
-                  <img src="assets/img/top/logo.png" alt="フッターロゴ">
+                    <img src="assets/img/top/logo.png" alt="フッターロゴ">
                 </div>
                 <h3 class="c-mv__title c-mv__title--footer">KIZUNAYA</h3>
                 <p class="c-address__number">
-                  〒123-4567</p>
+                    〒123-4567</p>
                 <p class="c-address">静岡県下田市白浜1-1</p>
                 <p class="c-tel__number">TEL 0123-45-6789</p>
-              </div>
-              <div class="p-footer__nav--wrap">
+            </div>
+            <div class="p-footer__nav--wrap">
                 <div class="p-footer__link--nav">
-                  <a class="c-footer__nav--item" href="#"><span>ー</span>　温泉</a>
-                  <a class="c-footer__nav--item" href="#"><span>ー</span>　料理</a>
-                  <a class="c-footer__nav--item" href="#"><span>ー</span>　客室</a>
+                    <a class="c-footer__nav--item" href="#"><span>ー</span>　温泉</a>
+                    <a class="c-footer__nav--item" href="#"><span>ー</span>　料理</a>
+                    <a class="c-footer__nav--item" href="#"><span>ー</span>　客室</a>
                 </div>
                 <div class="p-footer__link--nav">
-                  <a class="c-footer__nav--item" href="#"><span>ー</span>　過ごし方</a>
-                  <a class="c-footer__nav--item" href="#"><span>ー</span>　アクセス</a>
+                    <a class="c-footer__nav--item" href="#"><span>ー</span>　過ごし方</a>
+                    <a class="c-footer__nav--item" href="#"><span>ー</span>　アクセス</a>
                 </div>
-              </div>
             </div>
-            <div class="p-footer__sns--items">
-              <a href="#"><i class="fa-brands fa-facebook-f fa-3x" style="color:#ffffff;"></i></a>
-              <a href=""><i class="fa-brands fa-instagram fa-3x" style="color:#ffffff;"></i></a>
-            </div>
-            <p class="c-copyright">©︎2023 KIZUNAYA</p>
-          </footer>
-          <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-          <script src="./assets/js/script.min.js"></script>
-    </body>
+        </div>
+        <div class="p-footer__sns--items">
+            <a href="#"><i class="fa-brands fa-facebook-f fa-3x" style="color:#ffffff;"></i></a>
+            <a href=""><i class="fa-brands fa-instagram fa-3x" style="color:#ffffff;"></i></a>
+        </div>
+        <p class="c-copyright">©︎2023 KIZUNAYA</p>
+    </footer>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="./assets/js/script.min.js"></script>
+</body>
+
 </html>
